add commented out gc logging option